--- a/templates/cost_report.html
+++ b/templates/cost_report.html
@@ -18,7 +18,7 @@
     </header>
     
     <div class="container mt-5">
-        <h2 class="mb-4">AWS Costs for the Last 24 Hours</h2>
+        <h2 class="mb-4">--------------------------------</h2>
 
         <!-- Fetch Costs Button -->
         <div class="d-flex align-items-center">
