--- a/templates/cost_report.html
+++ b/templates/cost_report.html
@@ -12,13 +12,13 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">API Gateway Cloud Project - Group 2</a>
+                <a class="navbar-brand" href="#">API Gateway - Lambda Function - DynamoDB - Serverless Integration</a>
             </div>
         </nav>
     </header>
     
     <div class="container mt-5">
-        <h2 class="mb-4">Metro College Group 2 Cloud projetc</h2>
+        <h2 class="mb-4">Metro College Group 2 Cloud projet 2023-11-22</h2>
 
         <!-- Fetch Costs Button -->
         <div class="d-flex align-items-center">
