--- a/templates/cost_report.html
+++ b/templates/cost_report.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">API Gateway - Lambda Function - DynamoDB - Serverless Integration</a>
+                <a class="navbar-brand" href="#">2023-11-22 Gateway - Lambda Function - DynamoDB - Serverless Integration</a>
             </div>
         </nav>
     </header>
