--- a/templates/cost_report.html
+++ b/templates/cost_report.html
@@ -12,13 +12,13 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
-                <a class="navbar-brand" href="#">--------------------------</a>
+                <a class="navbar-brand" href="#">29-11-2023</a>
             </div>
         </nav>
     </header>
     
     <div class="container mt-5">
-        <h2 class="mb-4">Metro College Group 2 Cloud projet 2023-11-22</h2>
+        <h2 class="mb-4">Metro College Group 2 Cloud projet 2023-11-29</h2>
 
         <!-- Fetch Costs Button -->
         <div class="d-flex align-items-center">
